--- a/index.html
+++ b/index.html
@@ -57,14 +57,15 @@
             <div class="item" style="--position: 10"><img src="dragon_10.jpg" alt=""></div>
         </div>
         <div class="content">
-            <h1 data-content="CSS ONLY">
-                CSS ONLY
+            <h1 data-content="yooooo">
+                yooooo
+            
             </h1>
             <div class="author">
-                <h2>Code_With_Sujal_</h2>
-                <p>3D Image Slider</p>
+                <h2></h2>
+                <p></p>
                 <p>
-                    Follow me to watch many interesting videos
+                    
                 </p>
             </div>
             <div class="model"></div>
