--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>3D Image Slider by Code_With_Sujal_</title>
+    <title>3D Image Slider</title>
     <style>
         
         *{
